# bcirc

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: data_repr.rs  lexer.rs  lib.rs  line_char_nums.rs  main.rs  source_bytes.rs  source_chars.rs  test_util.rs  tokenizer.rs  util.rs
src/test_data/lexer/: comments.txt  identifiers.txt  test@basic_tokens.txt.snap  test@comments.txt.snap  test@empty_file.txt.snap  test@identifiers.txt.snap  test@integer_literals.txt.snap
src/test_data/source_bytes/: test@empty_file.bin.snap  test@one_char_a.bin.snap
src/test_data/source_chars/: test@empty_file.bin.snap  test@mixed_line_endings.bin.snap  test@one_char_a.bin.snap  test@two_lines.txt.snap
src/test_data/tokenizer/: basic_tokens.txt  integer_literals.txt  test@basic_tokens.txt.snap  test@comments.txt.snap  test@empty_file.txt.snap  test@identifiers.txt.snap  test@integer_literals.txt.snap
