[package]
name = "bcirc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
propane = "0.1.0"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["glob", "redactions", "ron"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
